<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HotOffer</string>
    <string name="action_settings">Configuración</string>
    <string name="user">Usuario</string>
    <string name="clave">Clave</string>
    <string name="boton_init_sesion">Iniciar</string>
    <string name="contacto_activity">Lista Contactos</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="agregar_contacto">Agregar</string>
    <string name="recordar_cuenta">recordar</string>
    <string name="test_conector"/>
    <string name="registrarse">Registrarse</string>
    <string name="IN_USUARIO">Usuario</string>
    <string name="IN_CLAVE">Contraseña</string>
    <string name="nomb">Nombre</string>
    <string name="apel">Apellido</string>
    <string name="sex">Sexo</string>
    <string name="mujer">Femenino</string>
    <string name="hombre">Masculino</string>
    <string name="fechanac">Fecha Nacimiento</string>
    <string name="ciudad">Ciudad</string>
    <string name="pais">País</string>
    <string name="enviar">Únete a HotOffer</string>
    <string name="datos">REGISTRATE</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Password</string>
    <string name="servicios">Acepto condiciones de servicio y politicas de seguridad</string>
    <string name="mBuscar">Buscar</string>
    <string name="mPublicar">Publicar</string>
    <string name="about">About</string>
    <string name="ingreso">Ingrese Publicacion</string>
    <string name="about_message">Aplicación desarrollada para proyecto de Tesis IPCHILE.</string>
    <string name="cesar">César Araya Acosta</string>
    <string name="daisy">Daisy Zambrano Garcés</string>
    <string name="rodrigo">Rodrigo Verdugo Reyes</string>
    <string name="Localizacion">Localización</string>
    <string name="datosPublica">Datos Publicación</string>
    <string name="comentar">Comentar</string>
    <string name="confirmar">Confirmar</string>

</resources>