<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blanco" >
 
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="2" >

        <!-- fila con nombre de formulario -->
        <!-- <TableRow android:id="@+id/datos"> -->

        <TextView
            android:id="@+id/datos"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="130dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/datos"
            android:textColor="@color/gris"
            android:textSize="@dimen/medio"
            android:textStyle="bold"
            android:typeface="sans"
            android:width="50dp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginLeft="210dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/fuego" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="15px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/nomb"
            android:textSize="@dimen/medio" />

        <!-- fila que indica ingresar apellido -->

        <EditText
            android:id="@+id/apell"
            android:layout_width="10px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="4dp"
            android:hint="@string/apel"
            android:textSize="@dimen/medio" />

        <!-- fila que indica el ingreso de usuario -->

        <TableRow android:id="@+id/user" >

            <TextView
                android:id="@+id/usuario"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:gravity="left"
                android:text="@string/usuario"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/usuario"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
          
                android:width="250px" />
        </TableRow>

        <!-- fila que indica ingresar la contraseña -->

        <TableRow android:id="@+id/contrasena" >

            <TextView
                android:id="@+id/pass"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:gravity="left|center"
                android:text="@string/pass"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/contras"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
            
                android:inputType="textPassword"
                android:width="250px" />
        </TableRow>

        <!-- selección de sexo -->

        <TableRow>

            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:gravity="left"
                android:text="@string/sex"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/sexo"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
            
                android:width="250px" />
        </TableRow>

        <!-- seleccion de fecha de nacimiento -->

        <TableRow>

            <TextView
                android:id="@+id/btnChangeDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:gravity="left"
                android:text="Fecha"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:inputType="date" >

                <requestFocus />
            </EditText>
        </TableRow>

        <!-- seleccion de ciudad -->

        <TableRow>

            <TextView
                android:id="@+id/pais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:gravity="left"
                android:text="@string/pais"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/nom_pais"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
                android:width="250px" />
        </TableRow>

        <!-- seleccion de pais -->

        <TableRow>

            <TextView
                android:id="@+id/ciudad"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:gravity="left"
                android:text="@string/ciudad"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/nom_ciudad"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:width="250px" />

        </TableRow>

        <!-- aceptar condiciones de alicacion -->

        <Button
            android:id="@+id/enviar"
            android:layout_width="232sp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5sp"
            android:background="@color/naranjo"
            android:gravity="center"
            android:text="@string/enviar"
            android:textAlignment="center"
            android:textColor="@color/gris"
            android:textColorHint="@color/Cranberry"
            android:textSize="@dimen/medio"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/servicios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/servicios"
            android:textSize="@dimen/pequeno" />
    </TableLayout>

</ScrollView>


