<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user"
        android:layout_below="@+id/user"
        android:layout_marginTop="49dp"
        android:ems="10" >

        
    </EditText>

    <TextView
        android:id="@+id/clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pass"
        android:layout_alignTop="@+id/pass"
        android:layout_toLeftOf="@+id/pass"
        android:text="@string/clave" />

    <Button
        android:id="@+id/btnInitSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pass"
        android:layout_below="@+id/pass"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="28dp"
        android:text="@string/boton_init_sesion" />

    <EditText
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="28dp"
        android:layout_marginTop="85dp"
        android:ems="10">
        <requestFocus />
        </EditText>

    <TextView
        android:id="@+id/usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/user"
        android:layout_alignRight="@+id/clave"
        android:text="@string/user" />

</RelativeLayout>